--- a/nacos-spring-boot-samples/nacos-discovery-sample/src/main/resources/application.properties
+++ b/nacos-spring-boot-samples/nacos-discovery-sample/src/main/resources/application.properties
@@ -2,7 +2,7 @@ nacos.discovery.server-addr=127.0.0.1:8848
 
 server.port=10012
 
-spring.application.name=SPRING_BOOT_SERVICE
+spring.application.name=mock-server-name
 nacos.discovery.auto-register=true
 nacos.discovery.register.ip=1.1.1.1
 nacos.discovery.register.port=1
@@ -11,7 +11,7 @@ nacos.discovery.register.healthy=false
 nacos.discovery.register.enabled=true
 nacos.discovery.register.ephemeral=true
 nacos.discovery.register.clusterName=SPRINGBOOT
-nacos.discovery.register.groupName=BOOT
+nacos.discovery.register.groupName=DEFAULT_GROUP
 #nacos.discovery.register.serviceName=SPRING_BOOT_SERVICE
 nacos.discovery.register.metadata.username=test
 
